--- a/collections/ansible_collections/hosninabil/kvm_terraform/roles/centos/templates/variables.tf.j2
+++ b/collections/ansible_collections/hosninabil/kvm_terraform/roles/centos/templates/variables.tf.j2
@@ -1,6 +1,6 @@
 variable "vm_volume" {
   description = "terraform volume name"
-  default     = "{{ vm_volume_name }}"
+  default     = "{{ vm_volume_name }}.qcow2"
 }
 variable "image_path" {
   description = "terraform image path"
