--- a/collections/ansible_collections/hosninabil/kvm_terraform/roles/rhel/templates/variables.tf.j2
+++ b/collections/ansible_collections/hosninabil/kvm_terraform/roles/rhel/templates/variables.tf.j2
@@ -1,6 +1,6 @@
 variable "vm_volume" {
   description = "terraform volume name"
-  default     = "{{ vm_hostname }}-rhel-{{ rhel_version }}.qcow2"
+  default     = "{{ vm_hostname }}.qcow2"
 }
 variable "image_path" {
   description = "terraform image path"
