--- a/roles/kvm_linux/templates/network_config_static.yaml.j2
+++ b/roles/kvm_linux/templates/network_config_static.yaml.j2
@@ -6,4 +6,4 @@ ethernets:
       - {{ vm_ip }}
     gateway4: {{ vm_gw }}
     nameservers:
-      addresses: [{{ vm_gw }}]
+      addresses: [{{ vm_dns }}]
