--- a/roles/kvm_linux/templates/network_config_static.yaml.j2
+++ b/roles/kvm_linux/templates/network_config_static.yaml.j2
@@ -3,7 +3,7 @@ ethernets:
   eth0:
     dhcp4: false
     addresses:
-      - {{ vm_ip }}
-    gateway4: {{ vm_gw }}/{{ vm_prefix }}
+      - {{ vm_ip }}/{{ vm_prefix }}
+    gateway4: {{ vm_gw }}
     nameservers:
       addresses: [{{ vm_dns }}]
