--- a/roles/linux_etcd/templates/etcd.service.j2
+++ b/roles/linux_etcd/templates/etcd.service.j2
@@ -6,7 +6,7 @@ Documentation=https://github.com/etcd-io/etcd
 Type=notify
 User=etcd
 ExecStart=/usr/local/bin/etcd \\
-  --name { start }{ ansible_hostname }{ end } \\
+  --name {{ start }}{{ ansible_hostname }}{{ end }} \\
   --data-dir=/var/lib/etcd \\
   --initial-advertise-peer-urls http://${"{{ ansible_default_ipv4.address }}"}:2380 \\
   --listen-peer-urls http://${"{{ ansible_default_ipv4.address }}"}:2380 \\
