--- a/roles/kvm_linux/templates/network_config_static_centos8.yaml.j2
+++ b/roles/kvm_linux/templates/network_config_static_centos8.yaml.j2
@@ -1,9 +1,10 @@
-version: 2
-ethernets:
-    eth0:
-        dhcp4: false
-        addresses:
-          - {{ vm_ip }}/{{ vm_prefix }}
-        gateway4: {{ vm_gw }}
-        nameservers:
-          addresses: [{{ vm_dns }}]
+network:
+  version: 1
+  config:
+    - type: physical
+      name: eth0
+      subnets:
+        - type: static
+          address: {{ vm_ip }}/{{ vm_prefix }}
+          gateway: {{ vm_gw }}
+          dns_nameservers: [{{ vm_dns }}]
